--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <title>Book Beta</title>
 
         <!-- Bootstrap CSS CDN -->
-        <link rel="stylesheet" href="https://github.com/adamorocha/adamorocha.github.io/blob/master/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
         <!-- Our Custom CSS -->
-        <link rel="stylesheet" href="https://github.com/adamorocha/adamorocha.github.io/blob/master/css/style2.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/blob/master/css/style2.css">
         <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="https://github.com/adamorocha/adamorocha.github.io/blob/master/css/jquery.mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/blob/master/css/jquery.mCustomScrollbar.min.css">
 
 
 <style>
@@ -205,11 +205,11 @@
 
 
         <!-- jQuery CDN -->
-        <script src="https://github.com/adamorocha/adamorocha.github.io/blob/master/js/jquery-1.12.0.min.js"></script>
+        <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/blob/master/js/jquery-1.12.0.min.js"></script>
         <!-- Bootstrap Js CDN -->
-        <script src="https://github.com/adamorocha/adamorocha.github.io/blob/master/js/bootstrap.min.js"></script>
+        <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/blob/master/js/bootstrap.min.js"></script>
         <!-- jQuery Custom Scroller CDN -->
-        <script src="https://github.com/adamorocha/adamorocha.github.io/blob/master/js/jquery.mCustomScrollbar.concat.min.js"></script>
+        <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/blob/master/js/jquery.mCustomScrollbar.concat.min.js"></script>
 
         <script type="text/javascript">
             $(document).ready(function () {
