--- a/index.html
+++ b/index.html
@@ -205,10 +205,13 @@
 
 
         <!-- jQuery CDN -->
+	<link rel="stylesheet"https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery-1.12.0.min.js">
         <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery-1.12.0.min.js"></script>
         <!-- Bootstrap Js CDN -->
+	<link rel="stylesheet"https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/bootstrap.min.js">											      
         <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/bootstrap.min.js"></script>
         <!-- jQuery Custom Scroller CDN -->
+	<link rel="stylesheet"https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery.mCustomScrollbar.concat.min.js">
         <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery.mCustomScrollbar.concat.min.js"></script>
 
         <script type="text/javascript">
