--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <title>Book Beta</title>
 
         <!-- Bootstrap CSS CDN -->
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://adamorocha.github.io/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
         <!-- Our Custom CSS -->
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/css/style2.css">
+        <link rel="stylesheet" href="https://adamorocha.github.io/css/style2.csss">
         <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/css/jquery.mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="https://adamorocha.github.io/css/jquery.mCustomScrollbar.min.css">
 
 
 <style>
@@ -182,12 +182,12 @@
 
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/chat.html"		target="framebody">Chat</a></li>
-                                <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/email.html"		target="framebody">E-mail</a></li>
-                                <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/hardware.html" 	target="framebody">Hardware</a></li>
-                                <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/multiskill.html" 	target="framebody">Multi Skill</a></li>
-                                <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/sat.html"		target="framebody">SAT</a></li>
-                                <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/tef.html" 		target="framebody">TEF</a></li>
+                                <li><a href="https://adamorocha.github.io/conteudo/procedimentos/chat.html"		target="framebody">Chat</a></li>
+                                <li><a href="https://adamorocha.github.io/conteudo/procedimentos/email.html"		target="framebody">E-mail</a></li>
+                                <li><a href="https://adamorocha.github.io/conteudo/procedimentos/hardware.html" 	target="framebody">Hardware</a></li>
+                                <li><a href="https://adamorocha.github.io/conteudo/procedimentos/multiskill.html" 	target="framebody">Multi Skill</a></li>
+                                <li><a href="https://adamorocha.github.io/conteudo/procedimentos/sat.html"		target="framebody">SAT</a></li>
+                                <li><a href="https://adamorocha.github.io/conteudo/procedimentos/tef.html" 		target="framebody">TEF</a></li>
                             </ul>
                         </div>
                     </div>
@@ -205,14 +205,14 @@
 
 
         <!-- jQuery CDN -->
-	<link rel="stylesheet"https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery-1.12.0.min.js">
-        <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery-1.12.0.min.js"></script>
+	<link rel="stylesheet"https://adamorocha.github.io/js/jquery-1.12.0.min.js">
+        <script src="https://adamorocha.github.io/js/jquery-1.12.0.min.js"></script>
         <!-- Bootstrap Js CDN -->
-	<link rel="stylesheet"https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/bootstrap.min.js">											      
-        <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/bootstrap.min.js"></script>
+	<link rel="stylesheet"https://adamorocha.github.io/js/bootstrap.min.js">											      
+        <script src="https://adamorocha.github.io/js/bootstrap.min.js"></script>
         <!-- jQuery Custom Scroller CDN -->
-	<link rel="stylesheet"https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery.mCustomScrollbar.concat.min.js">
-        <script src="https://raw.githubusercontent.com/adamorocha/adamorocha.github.io/master/js/jquery.mCustomScrollbar.concat.min.js"></script>
+	<link rel="stylesheet"https://adamorocha.github.io/js/jquery.mCustomScrollbar.concat.min.js">
+        <script src="https://adamorocha.github.io/js/jquery.mCustomScrollbar.concat.min.js"></script>
 
         <script type="text/javascript">
             $(document).ready(function () {
