--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                     <li><!--CÉLULAS-->
                         <a href="#celulaSubmenu" data-toggle="collapse" aria-expanded="false">Células</a>
                         <ul class="collapse list-unstyled" id="celulaSubmenu">
-                            <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/chat.html" 		target="framebody">Chat</a></li>
-                            <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/email.html" 	target="framebody">E-mail</a></li>
-                            <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/hardware.html" 	target="framebody">Hardware</a></li>
-                            <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/multiskill.html"target="framebody">Multi Skill</a></li>
-                            <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/sat.html" 		target="framebody">SAT</a></li>
-                            <li><a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/procedimentos/tef.html" 		target="framebody">TEF</a></li>
+                            <li><a href="https://adamorocha.github.io/conteudo/procedimentos/chat.html" 		target="framebody">Chat</a></li>
+                            <li><a href="https://adamorocha.github.io/conteudo/procedimentos/email.html" 	target="framebody">E-mail</a></li>
+                            <li><a href="https://adamorocha.github.io/conteudo/procedimentos/hardware.html" 	target="framebody">Hardware</a></li>
+                            <li><a href="https://adamorocha.github.io/conteudo/procedimentos/multiskill.html"target="framebody">Multi Skill</a></li>
+                            <li><a href="https://adamorocha.github.io/conteudo/procedimentos/sat.html" 		target="framebody">SAT</a></li>
+                            <li><a href="https://adamorocha.github.io/conteudo/procedimentos/tef.html" 		target="framebody">TEF</a></li>
                         </ul>
                     </li>
                     
@@ -159,7 +159,7 @@
                      </li>
                      
                      <li><!--TREINAMENTO-->
-                        <a href="https://github.com/adamorocha/adamorocha.github.io/blob/master/conteudo/momento_Treinamento/momento_treinamento.html" target="framebody">Treinamentos</a>
+                        <a href="https://adamorocha.github.io/conteudo/momento_Treinamento/momento_treinamento.html" target="framebody">Treinamentos</a>
                         <a href="#">Aniversáriantes</a>
                     </li>
 
