--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
         <!-- Our Custom CSS -->
-        <link rel="stylesheet" href="https://adamorocha.github.io/css/style2.csss">
+        <link rel="stylesheet" href="https://adamorocha.github.io/css/style2.css">
         <!-- Scrollbar Custom CSS -->
         <link rel="stylesheet" href="https://adamorocha.github.io/css/jquery.mCustomScrollbar.min.css">
 
