--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <!-- Bootstrap CSS CDN -->
         <link rel="stylesheet" href="https://adamorocha.github.io/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!--Font Awesome-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
         <!-- Our Custom CSS -->
         <link rel="stylesheet" href="https://adamorocha.github.io/css/style2.css">
@@ -60,7 +62,7 @@
                             <li><a href="#">Exceções TEF</a></li>
                             <li><a href="#">Exceções TEF Cancelamento</a></li>
                             <li><a href="#">Exceções SAC</a></li>
-							<li><a href="#">Exceções SAT</a></li>
+			    <li><a href="#">Exceções SAT</a></li>
                             <li><a href="#">Reclamações</a></li>
                             <li><a href="#">Sac Corporate </a></li>
                             <li><a href="#">Suporte N3</a></li>
