--- a/indexframe.html
+++ b/indexframe.html
@@ -8,11 +8,11 @@
         <title>Collapsible sidebar using Bootstrap 3</title>
 
         <!-- Bootstrap CSS CDN -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://adamorocha.github.io/css/bootstrap.min.css">
 
 
         <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="https://adamorocha.github.io/css/jquery.mCustomScrollbar.min.css">
 
 		 <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
 
@@ -81,15 +81,15 @@ body {
 			    <!-- Wrapper for slides -->
 			    <div class="carousel-inner">
 			      <div class="item active">
-			        <img src="img/banners/piecemaker1.png" >
+			        <img src="https://adamorocha.github.io/img/banners/piecemaker1.png" >
 			      </div>
 			
 			      <div class="item">
-			        <img src="img/banners/piecemaker2.png"  >
+			        <img src="https://adamorocha.github.io/img/banners/piecemaker2.png"  >
 			      </div>
 			    
 			      <div class="item">
-			        <img src="img/banners/piecemaker3.png" >
+			        <img src="https://adamorocha.github.io/img/banners/piecemaker3.png" >
 			      </div>
 			    </div>
 			    
