--- a/indexframe.html
+++ b/indexframe.html
@@ -14,7 +14,9 @@
         <!-- Scrollbar Custom CSS -->
         <link rel="stylesheet" href="https://adamorocha.github.io/css/jquery.mCustomScrollbar.min.css">
 
-		 <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
+	<!--Fonte icones-->
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 <!--Remover mais tarde para folha externa-->
 
