--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <div class="container-fluid">
 
                         <div class="navbar-header">
-                            <button type="button" id="sidebarCollapse" class="btn navbar-btn">
+                            <button type="button" id="sidebarCollapse" class="btn navbar-btn btn-default">
                                 <i class="glyphicon glyphicon-align-left"></i>
                                 <span>&ensp;MENU</span>
                             </button>
