--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             </button>
                         </div>
 
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <div class="collapse navbar-collapse" id="itens-nav-bar">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="https://adamorocha.github.io/conteudo/procedimentos/chat.html"		target="framebody">Chat</a></li>
                                 <li><a href="https://adamorocha.github.io/conteudo/procedimentos/email.html"		target="framebody">E-mail</a></li>
