--- a/conteudo/procedimentos/email.html
+++ b/conteudo/procedimentos/email.html
@@ -16,9 +16,9 @@
 <style>
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif; margin:20px;
 }
-	
+.alert-email h3 {margin-top:10px;}
 .alert-email{color:#795e8f;background-color:#f6f2fc;border-color:#e5d5fa}
 .alert-email h3 a {color:#795e8f;}
 .alert-email h3 a:hover {color:#c2ade3;text-decoration:none;}
