--- a/conteudo/procedimentos/hardware.html
+++ b/conteudo/procedimentos/hardware.html
@@ -16,8 +16,13 @@
 <style>
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif; margin:20px
 }
+
+h3 {
+	margin-top:10px
+}
+
 h3 a{
 	color:#3d7a3e;
 	text-decoration:none;
