--- a/conteudo/procedimentos/multiskill.html
+++ b/conteudo/procedimentos/multiskill.html
@@ -15,10 +15,8 @@
      
 <style>
 
-body {
-    font-family: 'Poppins', sans-serif;
-}
-	
+body {font-family: 'Poppins', sans-serif;margin:20px;}
+.alert-multiskill h3 {margin-top:10px}
 .alert-multiskill{color:#8a6d3b;background-color:#fcf8e3;border-color:#faebcc}
 .alert-multiskill h3 a {color:#8a6d3b;}
 .alert-multiskill h3 a:hover {color:#FFB400;text-decoration:none;}
