--- a/conteudo/procedimentos/chat.html
+++ b/conteudo/procedimentos/chat.html
@@ -15,7 +15,12 @@
      
 <style>
 
-body {font-family: 'Poppins', sans-serif;}
+body {font-family: 'Poppins', sans-serif; margin:20px}
+
+h3 {
+	margin-top:10px;
+}
+
 h3 a{
 	color:#000000;
 	text-decoration:none;
