--- a/conteudo/procedimentos/sat.html
+++ b/conteudo/procedimentos/sat.html
@@ -16,8 +16,13 @@
 <style>
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;margin:20px;
 }
+
+h3 {
+	margin-top:10px
+}
+
 h3 a{
 	color:#31708f;
 	text-decoration:none;
