--- a/indexframe.html
+++ b/indexframe.html
@@ -5,20 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Collapsible sidebar using Bootstrap 3</title>
+        <title>Book Bematech</title>
 
         <!-- Bootstrap CSS CDN -->
-        <link rel="stylesheet" href="https://adamorocha.github.io/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
 
 
         <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="https://adamorocha.github.io/css/jquery.mCustomScrollbar.min.css">
+        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 
-	<!--Fonte icones-->
-	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+		 <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
+		 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 <!--Remover mais tarde para folha externa-->
+
 
 <style>
 
@@ -62,6 +62,8 @@ body {
 </style>
 
 
+    	<base target="content">
+
 
     </head>
 	
@@ -72,7 +74,7 @@ body {
 		
 			<!--Carrousel Banner-->
 			<center>
-			<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="15000" style="margin-bottom:30px">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="15000" style="margin-bottom:30px;margin-top:50px">
 			    <!-- Indicators -->
 			    <ol class="carousel-indicators">
 			      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -83,15 +85,15 @@ body {
 			    <!-- Wrapper for slides -->
 			    <div class="carousel-inner">
 			      <div class="item active">
-			        <img src="https://adamorocha.github.io/img/banners/piecemaker1.png" >
+			        <img src="img/banners/piecemaker1.png" >
 			      </div>
 			
 			      <div class="item">
-			        <img src="https://adamorocha.github.io/img/banners/piecemaker2.png"  >
+			        <img src="img/banners/piecemaker2.png"  >
 			      </div>
 			    
 			      <div class="item">
-			        <img src="https://adamorocha.github.io/img/banners/piecemaker3.png" >
+			        <img src="img/banners/piecemaker3.png" >
 			      </div>
 			    </div>
 			    
@@ -134,8 +136,6 @@ body {
 			<div id="div_rodape_capa">
 				<i class="fas fa-users"></i>&emsp;<i class="fas fa-envelope-open-text"></i>&emsp;<i class="fas fa-globe-americas"></i>
 			</div>
-
-
 
 
 
